--- a/credit-&-Social-Media.html
+++ b/credit-&-Social-Media.html
@@ -12,7 +12,7 @@
       <!-- navbar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="./">
             <img src="/item/9DILLIGENT.png" alt="Bootstrap" width="125rem">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -27,16 +27,16 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-center align-item-center flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link" href="structure.html">Structure</a>
+                  <a class="nav-link" href="./structure.html">Structure</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="section.html">Section</a>
+                  <a class="nav-link" href="./section.html">Section</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="our-member.html">Our Member</a>
+                  <a class="nav-link" href="./our-member.html">Our Member</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="credit-&-Social-Media.html">Credit & Social Media</a>
+                  <a class="nav-link active" aria-current="page" href="./credit-&-Social-Media.html">Credit & Social Media</a>
                 </li>
               </ul>
             </div>
