--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-center align-item-center flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link" href="./structure.html">Structure</a>
+                  <a class="nav-link" href="./structure">Structure</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./section.html">Section</a>
+                  <a class="nav-link" href="./section">Section</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./our-member.html">Our Member</a>
+                  <a class="nav-link" href="./our-member">Our Member</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./credit-&-Social-Media.html">Credit & Social Media</a>
+                  <a class="nav-link" href="./credit-&-Social-Media">Credit & Social Media</a>
                 </li>
               </ul>
             </div>
