--- a/news.html
+++ b/news.html
@@ -27,10 +27,10 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-center align-item-center flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link " href="./structure.html">Structure</a>
+                  <a class="nav-link" href="./structure.html">Structure</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./section.html">Section</a>
+                  <a class="nav-link" href="./section.html">Section</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./more.html">More</a>
@@ -39,65 +39,36 @@
                   <a class="nav-link" href="./credit-&-Social-Media.html">Credit</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./news.html">news</a>
+                  <a class="nav-link active" aria-current="page" href="./news.html">news</a>
                 </li>
               </ul>
             </div>
           </div>
         </div>
       </nav>
-      <div class="sect-container">
-        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#section">
-          <p><img src="item/ISI WEBSITE (10).png" alt="3"></p>
-        </button>
+
+      <div class="news-content">
+        <a href="news/teacherday.html">
+          <p><img src="item/news-content/NEWS.png" alt="1" class="satu"></p>
+        </a>
       </div>
       <div class="copyright">
         <a href="https://www.instagram.com/nine._dilligent/" target="_blank"><i class="fa-brands fa-instagram"></i> nine._dilligent</a>
       </div>
+  <style>
+    body{
+      background-color: white;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: center;
+      background-size: cover;
+    }
 
-      <div class="modal fade" id="section" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-scrollable">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">9D Section</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <p>
-                Cleanliness <br>
-                1.Najla Feby Aulia <br>
-                2.Afrina Adani Sopian <br>
-                3.Nazwa Nurkhaliza <br>
-                <br>
-                Religious <br>
-                1.Muhammad Azzam Tsaqiif <br>
-                <br>
-                Safety <br>
-                1.Nanda Putri Ikhliana <br>
-                2.Ganendra Mahardika Putra Ednanta <br>                
-              </p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <style>
-        body{
-          background-color: white;
-          background-repeat: no-repeat;
-          background-attachment: fixed;
-          background-position: center;
-          background-size: cover;
-        }
-
-        @media screen and (max-width: 526px) {
-          body {
-            background-color: white;
-          }
-        }
-      </style>
+    @media screen and (max-width: 526px) {
+      body {
+        background-color: white;
+      }
+    }
+  </style>    
 </body>
 </html>
