--- a/achievment.html
+++ b/achievment.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="icon" href="item/icon.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/item/icon.png">
+    <link rel="stylesheet" href="/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,77 +27,52 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-center align-item-center flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link " href="./structure.html">Structure</a>
+                  <a class="nav-link" href="/structure.html">Structure</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./section.html">Section</a>
+                  <a class="nav-link" href="/section.html">Section</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./more.html">More</a>
+                  <a class="nav-link" href="/more.html">More</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./credit-&-Social-Media.html">Credit</a>
+                  <a class="nav-link" href="/credit-&-Social-Media.html">Credit</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./news.html">news</a>
+                  <a class="nav-link active" aria-current="page" href="/news.html">news</a>
                 </li>
               </ul>
             </div>
           </div>
         </div>
       </nav>
-      <div class="sect-container">
-        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#section">
-          <p><img src="item/ISI WEBSITE (10).png" alt="3"></p>
-        </button>
-      </div>
+        <div class="achipments">
+          <img src="/item/ISI WEBSITE (8).png" alt="header" class="heder">
+          <img src="/item/31.png" alt="foto1">
+          <img src="/item/32.png" alt="foto2" >
+          <img src="/item/33.png" alt="foto3">    
+          <img src="/item/34.png" alt="fotogatau">  
+        </div>
+
+
+
       <div class="copyright">
         <a href="https://www.instagram.com/nine._dilligent/" target="_blank"><i class="fa-brands fa-instagram"></i> nine._dilligent</a>
       </div>
+  <style>
+    body{
+      background-color: white;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: center;
+      background-size: cover;
+    }
 
-      <div class="modal fade" id="section" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-scrollable">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">9D Section</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <p>
-                Cleanliness <br>
-                1.Najla Feby Aulia <br>
-                2.Afrina Adani Sopian <br>
-                3.Nazwa Nurkhaliza <br>
-                <br>
-                Religious <br>
-                1.Muhammad Azzam Tsaqiif <br>
-                <br>
-                Safety <br>
-                1.Nanda Putri Ikhliana <br>
-                2.Ganendra Mahardika Putra Ednanta <br>                
-              </p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <style>
-        body{
-          background-color: white;
-          background-repeat: no-repeat;
-          background-attachment: fixed;
-          background-position: center;
-          background-size: cover;
-        }
-
-        @media screen and (max-width: 526px) {
-          body {
-            background-color: white;
-          }
-        }
-      </style>
+    @media screen and (max-width: 526px) {
+      body {
+        background-color: white;
+      }
+    }
+  </style>    
 </body>
 </html>
