--- a/more.html
+++ b/more.html
@@ -27,13 +27,13 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-center align-item-center flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link " href="./structure.html">Structure</a>
+                  <a class="nav-link" href="./structure.html">Structure</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./section.html">Section</a>
+                  <a class="nav-link " href="./section.html">Section</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./more.html">More</a>
+                  <a class="nav-link active" aria-current="page" href="./more.html">More</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./credit-&-Social-Media.html">Credit</a>
@@ -46,43 +46,75 @@
           </div>
         </div>
       </nav>
-      <div class="sect-container">
-        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#section">
-          <p><img src="item/ISI WEBSITE (10).png" alt="3"></p>
+
+      <div class="more-content">
+        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#Member">
+          <p><img src="item/ISI WEBSITE (4).png" alt="1" class="satu"></p>
         </button>
+        <a href="achievment.html">
+          <p><img src="item/ISI WEBSITE (5).png" alt="1" class="satu"></p>
+        </a>
       </div>
       <div class="copyright">
         <a href="https://www.instagram.com/nine._dilligent/" target="_blank"><i class="fa-brands fa-instagram"></i> nine._dilligent</a>
       </div>
 
-      <div class="modal fade" id="section" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-scrollable">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">9D Section</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <p>
-                Cleanliness <br>
-                1.Najla Feby Aulia <br>
-                2.Afrina Adani Sopian <br>
-                3.Nazwa Nurkhaliza <br>
-                <br>
-                Religious <br>
-                1.Muhammad Azzam Tsaqiif <br>
-                <br>
-                Safety <br>
-                1.Nanda Putri Ikhliana <br>
-                2.Ganendra Mahardika Putra Ednanta <br>                
-              </p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
+
+      <div class="copyright">
+        <a href="https://www.instagram.com/nine._dilligent/" target="_blank"><i class="fa-brands fa-instagram"></i> nine._dilligent</a>
       </div>
+
+<!-- Modal member -->
+<div class="modal fade" id="Member" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Members</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>
+          1.Afrina Adani Sopian <br>
+          2.Agustina Nelcy Ramdhani Tanau<br> 
+          3.Almira Syifa Kamila<br>
+          4.Andi Hasanuddin Abqari<br>
+          5.Angelo Marvel Momongan<br>
+          6.Annisa Danis Raihanah<br>
+          7.Ganendra Mahardika Putra Ednanta<br>
+          8.Gathan Wirawan<br>
+          9.Gusti Cairunnisa Misselina<br>
+          10.Gusti Muhammad Nur Nafis<br>
+          11.Jacinda Janitra Jayen<br>
+          12.M.Azmi Suryaman<br>
+          13.Maynika Syakirina<br>
+          14.M.Rizky Jamirudin<br>
+          15.M.Ariel Akmal<br>
+          16.M.Azzam Tsaqiif<br>
+          17.M.Daffa Andwitama Rizqullah<br>
+          18.M.Iqbal Syahreen<br>
+          19.M.Rizaldy Ramdhan <br>
+          20.M.Zaidan Sakhi Awaluddin<br>
+          21.M.Zien Mughni<br>
+          22.Nafiisah Farah Aprilia<br>
+          23.Najla Feby Aulia<br>
+          24.Nanda Putri Ikhliana<br>
+          25.Naufal Moreno<br>
+          26.Nazwa Nurkhaliza <br>
+          27.Putri Khairunisa Az Zahra <br>
+          28.Rajib Rahman <br>
+          29.Rianti Agustina <br>
+          30.Shynta<br>
+          31.Vergian Laysa Wiratama<br>
+          32.Zhaafira Salwa Almira
+        </p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
       <style>
         body{
@@ -96,8 +128,9 @@
         @media screen and (max-width: 526px) {
           body {
             background-color: white;
+            
           }
-        }
+        } 
       </style>
 </body>
 </html>
