--- a/credit-&-Social-Media.html
+++ b/credit-&-Social-Media.html
@@ -27,19 +27,19 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-center align-item-center flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link" href="./structure.html">Structure</a>
+                  <a class="nav-link" href="./structure">Structure</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./section.html">Section</a>
+                  <a class="nav-link" href="./section">Section</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./more.html">More</a>
+                  <a class="nav-link" href="./more">More</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./credit-&-Social-Media.html">Credit</a>
+                  <a class="nav-link active" aria-current="page" href="./credit-&-Social-Media">Credit</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./news.html">news</a>
+                  <a class="nav-link" href="./news">news</a>
                 </li>
               </ul>
             </div>
