--- a/news.html
+++ b/news.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="icon" href="item/icon.png">
+    <link rel="icon" href="/item/icon.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -27,19 +27,19 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-center align-item-center flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link" href="./structure.html">Structure</a>
+                  <a class="nav-link" href="./structure">Structure</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./section.html">Section</a>
+                  <a class="nav-link" href="./section">Section</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./more.html">More</a>
+                  <a class="nav-link" href="./more">More</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./credit-&-Social-Media.html">Credit</a>
+                  <a class="nav-link" href="./credit-&-Social-Media">Credit</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./news.html">news</a>
+                  <a class="nav-link active" aria-current="page" href="./news">news</a>
                 </li>
               </ul>
             </div>
@@ -48,7 +48,7 @@
       </nav>
 
       <div class="news-content">
-        <a href="news/teacherday.html">
+        <a href="news/teacherday">
           <p><img src="item/news-content/NEWS.png" alt="1" class="satu"></p>
         </a>
       </div>
