--- a/section.html
+++ b/section.html
@@ -13,7 +13,7 @@
       <nav class="navbar navbar-expand-lg .navbar-light sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="./">
-            <img src="/item/LOGO-1.png" alt="Bootstrap" width="55rem">
+            <img src="/item/l1.png" alt="Bootstrap" width="55rem">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
