--- a/achievment.html
+++ b/achievment.html
@@ -21,7 +21,7 @@
 
           <div class="text-bg-light offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><img src="/item/Logo-1.png" alt="Bootstrap" width="55rem"></h5>
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><img src="/item/l1.png" alt="Bootstrap" width="55rem"></h5>
               <button type="button" class="btn-close btn-close-black" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
