--- a/news.html
+++ b/news.html
@@ -51,6 +51,9 @@
         <a href="news/teacherday">
           <p><img src="item/news-content/NEWS.png" alt="1" class="satu"></p>
         </a>
+        <a href="news/menyajikan-makanan.html">
+          <p><img src="item/news-content/niws.png" alt="1" class="satu"></p>
+        </a>
       </div>
       <div class="copyright">
         <a href="https://www.instagram.com/nine._dilligent/" target="_blank"><i class="fa-brands fa-instagram"></i> nine._dilligent</a>
